@@ -193,6 +193,13 @@ Documentation
 - Updated Routes bfgwiki2 tutorial to reflect the fact that context
   factories are now no longer used.
 
+Internal
+--------
+
+- Make Routes mapper responsible for doing magic to fix up PATH_INFO
+  and SCRIPT_NAME when a ``path_info`` key exists in the matchdict.
+  This used to be done in the traverser, which made no sense.
+
 0.9.1 (2009-06-02)
 ==================
 
